fix: popup z-index

--- a/src/styles/ui.module.css
+++ b/src/styles/ui.module.css
@@ -1219,7 +1219,7 @@ form.multiFieldForm {
 
 .popupContainer {
   position: relative;
-  z-index: 1;
+  z-index: 2;
 }
 
 .inputSizer {
